project(blync)
cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)

set(SRCS main.cpp)

if(APPLE)
    find_library(IOKIT_LIBRARY IOKit)
    find_library(COCOA_LIBRARY Cocoa)
    include_directories(mac)
    link_directories(mac)
    list(APPEND SRCS blync.mm)
    set(LIBS blynclightcontrol ${COCOA_LIBRARY} ${IOKIT_LIBRARY})
elseif(UNIX)
    include_directories(linux)
    link_directories(linux)
    find_library(LIBUSB_LIBRARY NAMES usb-1.0)
    set(THREADS_PREFER_PTHREAD_FLAG ON)
    find_package(Threads REQUIRED)
    list(APPEND SRCS blync.cpp)
    set(LIBS embravaapi ${LIBUSB_LIBRARY} Threads::Threads)
endif()


add_executable(blync ${SRCS})
target_link_libraries(blync ${LIBS})
install(TARGETS blync RUNTIME DESTINATION bin)
